<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="waitingForConnection">Buffering 30%</string>
    <string name="waitingForCertification">Buffering 60%</string>
    <string name="waitingForMedia">Buffering 90%</string>
    <string name="captureSuccess">Save to sdcard</string>
    <string name="noNetwork">No Internet connection, please check the network</string>
    <string name="exitAlert">Quit it?</string>
    <string name="exit">Quit</string>
    <string name="warn">Tip</string>
    <string name="fileDir">Dir</string>
    <string name="rootDir">toRootDir</string>
    <string name="upperDir">upDir</string>
    <string name="continues">Continue</string>
    <string name="switchWIFI">WLAN</string>
    <string name="flowAlert">Suggest use Wifi</string>
    <string name="networksettings">Network setting</string>
    <string name="accountsettings">Account setting</string>
    <string name="Login">Login</string>
    <string name="logging">Logging, Please wait.....</string>
    <string name="systemError">System error</string>
    <string name="errorCode">Error code </string>
    <string name="Authenticationing">Buffering 60%</string>
    <string name="nocamera">There is no next device</string>
    <string name="more">More</string>
    <string name="up">Answer</string>
    <string name="down">Hand Up</string>
    <string name="audio">Talk</string>
    <string name="video">Video</string>
    <string name="lock">UnLock</string>
    <string name="picture">Photo</string>
    <string name="back">Back</string>
    <string name="setting">Setting</string>
    <string name="myDevice">MyDevice</string>
    <string name="mypicture">Gallery</string>
    <string name="coustom">Visitor log</string>
    <string name="deviceMessage">Device Information</string>
    <string name="recordSetting">Photos setting</string>
    <string name="researtDivece">Reboot</string>
    <string name="againInput">RePWD</string>
    <string name="verificationCode">Verification code</string>
    <string name="pleaseVerificationCode">Please enter</string>
    <string name="next">Next</string>
    <string name="researtVerificationCode">To obtain the verification code</string>
    <string name="getVerificationCode">Get Verification code</string>
    <string name="deviceName">Name</string>
    <string name="change">Save</string>
    <string name="deleteDevice">Delete Device</string>
    <string name="deviceMan">Authorization Account</string>
    <string name="setPassword">CHANGE PASSWORD</string>
    <string name="inputPassword">PWD</string>
    <string name="done">Save</string>
    <string name="wifi">Current Wifi:</string>
    <string name="nativeDevice">Search</string>
    <string name="refrush">Refresh</string>
    <string name="registered">SignUp</string>
    <string name="registeredNewUsername">SignUp</string>
    <string name="nativeDeviceser">Local Device</string>
    <string name="forgetPassword">Forgot</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="apName">SSID</string>
    <string name="newPassword">PWD</string>
    <string name="deviceSer">Serial</string>
    <string name="wifiSearch">Search</string>
    <string name="qrCode">qrCode</string>
    <string name="addDevice">Add Device</string>
    <string name="authorization">Assign</string>
    <string name="authorizationSer">Please enter authorization account</string>
    <string name="authorizationAccount">Assign Account</string>
    <string name="notDevice">No online device！</string>
    <string name="accountHestory">Visitor log</string>
    <string name="pageLoad">Loading</string>
    <string name="connectSucc">Connect successfully</string>
    <string name="phoneRegisteredNO">The account does not exist!</string>
    <string name="phoneRegisteredYes">Ths account already exists!</string>
    <string name="againReseartVerificationCode">Failed to get verification code</string>
    <string name="getVerificationCodeing">Get verification code, please wait</string>
    <string name="empty">Cannot be empty!</string>
    <string name="VerificationCodeSucc">Verification code already send</string>
    <string name="getVerificationCodeFailure">Failed to get verification code</string>
    <string name="verificationError">Vailed verification code</string>
    <string name="againVerificationCode">To obtain the verification code</string>
    <string name="suc">Successful!</string>
    <string name="fail">Failed!</string>
    <string name="wait">Please wait</string>
    <string name="deldeteDevice">Delete?</string>
    <string name="permissions">Without permission!</string>
    <string name="setPasswording">Setting Password</string>
    <string name="passwordsucc">Setting password successfully</string>
    <string name="passwordfail">Setting password unsuccessfully</string>
    <string name="verFail">Authentication failed</string>
    <string name="phoneNum">Email Address</string> <!-- 英文版本应该写：Email Address -->
    <string name="noDevice">No device</string>
    <string name="restartDevice">Reboot?</string>
    <string name="illegal">Contains illegal characters!</string>
    <string name="ser">Serial</string>
    <string name="same">The two input password does not match</string>
    <string name="yesOrNo">Already has been authorized</string>
    <string name="deleteAuthorization">Do you want to delete the account?</string>
    <string name="serError">Invalid Serial</string>
    <string name="alreadyAdd">Already has been added</string>
    <string name="door">Doorbell</string>
    <string name="know">I know!</string>
    <string name="costomDoor">Visitor coming</string>
    <string name="mistake">An error occurred</string>
    <string name="myDeviceOn">MyDevice(ON)</string>
    <string name="myDeviceOff">MyDevice(OFF)</string>
    <string name="authDeviceOn">AuthDevice(ON)</string>
    <string name="authDeviceOff">AuthDevice(OFF)</string>
    <string name="monitoring">monitor</string>
    <string name="pushFail">registration failed the PushMessage!</string>
    <string name="SOUND_SWITCH_ERROR">Failed to open speaker</string>
    <string name="SOUND_OPEN_WARN">Failed to open speaker</string>
    <string name="MICRO_SWITCH_ERROR">Failed to open microphone</string>
    <string name="MICRO_OPEN_WARN">Failed to open microphone</string>
    <string name="PLEASE_FIRST_SELECT_CAMERA">Select one device first</string>
    <string name="PLEASE_SELECT_ONLINE_CAMERA">Please select online device</string>
    <string name="CAPTURE_ERROR">Failed to photo</string>
    <string name="OPENFILE_ERROR">Please check sdcard</string>
    <string name="CONNECT_FAILED">Failed to connnect device, please check your network</string>
    <string name="SOCKET_CLOSE">Connect interrupt, please connect again</string>
    <string name="SOCKET_TIMEOUT">Connect server timeout</string>
    <string name="PLAYBACK_ERROR">Failed to play</string>
    <string name="WIFI_CONN_ERR">Wifi disconnect</string>
    <string name="ConFailed">Failed to connect device</string>
    <string name="RECEIVE_DATA_TIMEOUT">Timeout</string>
    <string name="LOGIN_TIMEOUT">Logging timeout</string>
    <string name="UNKNOWN_ERROR">Unknow error</string>
    <string name="NO_EMPTY">The user name and password cannot be empty. Please fill in</string>
    <string name="scan_tips">QR code</string>
    <string name="aboutText">        DDintercom \n\n       
        Version: %1$s\n
        Build: %2$s \n\n
        Copyright© 2015 DongDong .\n
        All rights reserved.</string>
    <string name="infoText"><b>☆“DDintercom”Sevice Protocol</b><b></b></string>
    <string name="please_input_device_name">input device name</string>

    <string name="app_name">慧e家</string>
    <string name="cancel">取消</string>
    <string name="acc_register_btn">注册</string>
    <string name="hint_username">请输入手机号/邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="app_pwd_hint">显示密码</string>
    <string name="app_pwd_show">显示密码</string>
    <string name="k_login_edit_hint_captcha">请输入验证码</string>
    <string name="set_password_forget">忘记密码?</string>
    <string name="acc_login_btn">登录</string>
    <string name="acc_register_fast">快速注册</string>
    <string name="login_haiwai">海外手机号登录</string>
    <string name="account_manage">帐号管理</string>
    <string name="set">设置</string>
    <string name="help">帮助与反馈</string>
    <string name="about">关于</string>
    <string name="photo">相册</string>
    <string name="goodscontent">产品详情</string>
    <string name="goodsdis">产品描述</string>
    <string name="ppicture">产品图片</string>

    <string name="unknown_device">Unknown device</string>
    <string name="label_rssi">RSSI:</string>
    <string name="header_scan_record">Scan Record</string>
    <string name="not_supported">Not supported</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="supported">Supported</string>
    <!-- Menu items -->
    <string name="menu_about">About</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_share">Share</string>

    <string name="formatter_item_count">Items: %s</string>
    <string name="label_bluetooth_le_status">Bluetooth LE:</string>
    <string name="label_bluetooth_status">Bluetooth:</string>
    <string name="no_data">No data</string>
    <string name="private_message_quit">退出</string>
    <string name="O2O_Login_Top">登录</string>
    <string name="O2O_Login_Username">  手机号码/用户名</string>
    <string name="O2O_Login_Lost_Password">忘记密码?</string>
    <string name="O2O_Login_Register">还没有账户？立即去注册</string>
</resources>