<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff0f0f3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:background="@mipmap/title_back" >

            <LinearLayout
                android:id="@+id/ll_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="@drawable/button_ebtn" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@mipmap/vp_back_white_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/back"
                    android:textColor="#ffffffff"
                    android:textSize="15.0dip"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/setPassword"
                android:textColor="#ffffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="50dp"
            android:background="@drawable/backgroud_write_drawable"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="30dp"
            android:background="@drawable/backgroud_write_drawable"
            android:gravity="center" >

            <Button
                android:id="@+id/bt_done"
                android:layout_width="match_parent"
                android:layout_height="43.0dip"
                android:background="@drawable/login_ebtn"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>