<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:background="@mipmap/title_back">

        <LinearLayout
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_ebtn">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@mipmap/vp_back_white_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:paddingRight="5dp"
                android:text="@string/back"
                android:textColor="#ffffffff"
                android:textSize="15.0dip"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_ebtn"
            android:gravity="center"
            android:minWidth="70dp"
            android:text="@string/add"
            android:textColor="#ffffffff"
            android:textSize="15.0dip"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/list"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_biglist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:cacheColorHint="#00000000"
        android:choiceMode="singleChoice"
        android:divider="@null"
        android:drawSelectorOnTop="false"
        android:footerDividersEnabled="false"/>

</LinearLayout>