<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffefeff4"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@mipmap/title_back" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_ebtn" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@mipmap/vp_back_white_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="left|center_vertical"
                android:paddingRight="5dp"
                android:text="@string/back"
                android:textColor="#ffffffff"
                android:textSize="15.0dip"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/deviceMessage"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:orientation="vertical"
        android:requiresFadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34.0dip"
            android:background="@drawable/widget_list_item_bg_selector"
            android:orientation="vertical"
            android:paddingBottom="20.0dip"
            android:visibility="visible" >

            <RelativeLayout
                android:id="@+id/wifiSetting"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/widget_list_item_bg_selector"
                android:paddingBottom="6.0dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="6.0dip" >

                <RelativeLayout
                    android:id="@+id/home_setting_reward_img_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="12.0dip" >

                    <TextView
                        android:id="@+id/home_setting_reward_img"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="@string/deviceName"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/et_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/home_setting_reward_img_layout"
                    android:background="@color/white"
                    android:hint="@string/please_input_device_name"
                    android:inputType="text"
                    android:paddingLeft="12.0dip"
                    android:paddingRight="50dp"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/bt_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/change" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginLeft="20dp"
                android:background="#d9d9d9" />

            <RelativeLayout
                android:id="@+id/rl_authorize_account"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/widget_list_item_bg_selector"
                android:paddingBottom="6.0dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="6.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="12.0dip"
                    android:text="@string/deviceMan"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/space_favor_item_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginLeft="20dp"
                android:background="#d9d9d9" />

            <RelativeLayout
                android:id="@+id/rl_delete_device"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/widget_list_item_bg_selector"
                android:paddingBottom="6.0dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="6.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="12.0dip"
                    android:text="@string/deleteDevice"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/space_favor_item_arrow" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>