<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff0f0f3"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:background="@mipmap/title_back">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_ebtn">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@mipmap/vp_back_white_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:paddingRight="5dp"
                android:text="@string/back"
                android:textColor="#ffffffff"
                android:textSize="15.0dip"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_ebtn"
            android:gravity="center"
            android:minWidth="70dp"
            android:text="@string/refrush"
            android:textColor="#ffffffff"
            android:textSize="15.0dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/nativeDeviceser"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:background="#FFFFFF"
        android:cacheColorHint="#00000000"
        android:choiceMode="singleChoice"
        android:divider="#AAAAAA"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="false"
        android:footerDividersEnabled="false"></ListView>

</LinearLayout>